2007-06-05  Eitan Isaacson  <eitan@ascender.com>

	* src/lib/accerciser/accessible_treeview.py: Decouple children
	node loading (bug 441013).

2007-06-04  Eitan Isaacson  <eitan@ascender.com>

	* plugins/interface_view.py: Scroll a focused expander
	in plugin area into view.
	* README: Bumped to version 0.1.4
	* configure.in: Bumped to version 0.1.4
	* debian/changelog: Bumped to version 0.1.4
	
2007-06-03  Eitan Isaacson  <eitan@ascender.com>

	* NEWS: Updated news file for upcomming release.

2007-06-02  Eitan Isaacson  <eitan@ascender.com>

	* plugins/interface_view.glade: Made added labels selectable 
	(bug 440972).
	
2007-06-01  Eitan Isaacson  <eitan@ascender.com>

	* plugins/interface_view.py: Removed print.
	* src/lib/accerciser/accessible_treeview.py: Made '<dead>' string 
	localized.
	* src/lib/accerciser/plugin/view.py: Plugin tabs now accessible
	(we were getting "None" for pluginview children via at-spi).

2007-05-31  Eitan Isaacson  <eitan@ascender.com>

	* plugins/interface_view.glade: 
	* plugins/interface_view.py: Added accessible description and
	childcount. and image description and locale (bug 440972).

2007-05-28  Eitan Isaacson  <eitan@ascender.com>

	* plugins/script_recorder.py: Added title to confirm clear dialog.

2007-05-27  Eitan Isaacson  <eitan@ascender.com>

	* plugins/interface_view.py: Fixed bug 441201.

2007-05-24  Eitan Isaacson  <eitan@ascender.com>

	* src/lib/accerciser/__init__.py: Completed epydoc.
	* src/lib/accerciser/plugin/message.py: Completed epydoc.
	
	* src/lib/accerciser/plugin/message.py: Epydoced.
	* src/lib/accerciser/plugin/plugin_manager.py: Epydoced.
	* src/lib/accerciser/plugin/view.py: Epydoced.

2007-05-22  Eitan Isaacson  <eitan@ascender.com>

	* src/lib/accerciser/accerciser.py: Added forced 
	refresh after rectangle blinks (bug 433514).
	* src/lib/accerciser/node.py: Added a signal for when the
	rectangle stops blinking.

	* plugins/interface_view.py: Fixed bug 440177.

	* plugins/interface_view.glade: 